--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
 * {
 	margin: 0;
@@ -18,13 +19,16 @@ html {
 $color-shadow: rgba(0, 0, 0, 0.5);
 $color-text: #fff;
 $color-heading: #ddd;
+$color-brand-1: #9e0e09;
 
 .heading {
-	font-family: 'Oswald', sans-serif;
-	font-size: 10rem;
-	font-weight: 300;
-	margin-right: 4rem;
-	color: $color-heading;
+	font-family: 'Audiowide', cursive;
+	font-size: 5rem;
+	font-weight: 400;
+	color: red;
+	text-transform: uppercase;
+	text-align: center;
+	margin: 4rem 0;
 }
 
 // Navbar
@@ -32,8 +36,12 @@ $color-heading: #ddd;
 .navbar {
 	width: 100%;
 	height: 10rem;
-	background-color: rgba(0, 0, 0, 0.75);
-	backdrop-filter: blur(7px);
+	background: url('./images/road.jpg') no-repeat;
+	// background-color: rgba(0, 0, 0, 0.75);
+	background-size: cover;
+	background-position: top;
+	// backdrop-filter: blur(7px);
+	height: 10rem;
 	position: fixed;
 	top: -20rem;
 	z-index: 10;
@@ -57,7 +65,8 @@ $color-heading: #ddd;
 		height: 10rem;
 		position: absolute;
 		z-index: 100;
-		animation: carMove 15s cubic-bezier(0.04, 1.01, 0.87, 0.06) infinite 1.2s, carRide 0.3s linear infinite;
+		// animation: carMove 15s cubic-bezier(0.04, 1.01, 0.87, 0.06) infinite 1.2s, carRide 0.4s linear infinite;
+		animation: carMove 15s cubic-bezier(0.18, 0.84, 0.85, 0.35) infinite 1.2s, carRide 0.4s linear infinite;
 
 		@keyframes carMove {
 			0% {
@@ -137,10 +146,11 @@ $color-heading: #ddd;
 		}
 
 		span {
+			display: inline-block;
 			font-family: 'Lato', sans-serif;
 			font-size: 3.5rem;
 			font-weight: 900;
-			color: #9e0e09;
+			color: $color-brand-1;
 		}
 	}
 
@@ -171,17 +181,17 @@ $color-heading: #ddd;
 			transition: all 0.4s;
 
 			&::first-letter {
-				color: #9e0e09;
+				color: $color-brand-1;
 			}
 
 			&:hover {
-				color: #9e0e09;
+				color: $color-brand-1;
 				text-shadow: 0rem 0rem 0.3rem $color-text;
 			}
 
 			&:hover::first-letter {
 				color: $color-text;
-				text-shadow: 0rem 0rem 3rem #9e0e09;
+				text-shadow: 0rem 0rem 3rem $color-brand-1;
 			}
 		}
 	}
@@ -223,7 +233,7 @@ $color-heading: #ddd;
 }
 
 .menu:hover .line {
-	background-color: #9e0e09;
+	background-color: $color-brand-1;
 }
 
 .change .line-1 {
@@ -240,7 +250,7 @@ $color-heading: #ddd;
 	width: 100%;
 	height: 100vh;
 	position: relative;
-	
+
 	&__video {
 		position: absolute;
 		top: 0;
@@ -248,10 +258,10 @@ $color-heading: #ddd;
 		width: 100%;
 		height: 100%;
 		z-index: 0;
-		opacity: .7;
+		opacity: 0.7;
 		overflow: hidden;
 	}
-	
+
 	&__video-content {
 		height: 100%;
 		width: 100%;
@@ -409,70 +419,11 @@ $color-heading: #ddd;
 	background-color: #222020;
 	display: flex;
 	align-items: center;
+	flex-direction: column;
 	padding: 0 10rem;
 	position: relative;
 
-	&__video-wrapper {
-		width: 100rem;
-		height: 50rem;
-		position: absolute;
-		top: 10rem;
-		right: 15rem;
-		box-shadow: 3rem 3rem 3rem rgba(0, 0, 0, 0.7);
-		overflow: hidden;
-
-		&:hover .section-2__controls {
-			transform: translateY(0);
-		}
-
-		video {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-			opacity: 0.3;
-			transition: opacity 0.5s;
-		}
-	}
-
-	&__controls {
-		width: 100%;
-		position: absolute;
-		bottom: 0;
-		background-color: rgba(0, 0, 0, 0.7);
-		transform: translateY(calc(100% - 0.4rem));
-		transition: transform 0.4s;
-
-		&-buttons {
-			padding: 2rem 1rem 1rem 1rem;
-
-			button {
-				background: none;
-				border: none;
-				cursor: pointer;
-			}
-
-			i {
-				font-size: 2.8rem;
-				color: $color-text;
-			}
-		}
-		&-video-bar-wrapper {
-			width: 100%;
-			height: 0.7rem;
-			background-color: #000;
-			position: absolute;
-			top: 0;
-			left: 0;
-		}
-
-		&-video-bar {
-			height: 100%;
-			width: 0%;
-			background-color: #d30819;
-			transition: width 0.5s linear;
-		}
-	}
-
+	
 	&__paragraph {
 		width: 100rem;
 		position: absolute;
@@ -670,109 +621,155 @@ $color-heading: #ddd;
 }
 // End of section 3
 
-// Section 4
-.section-4 {
-	width: 100;
+// Accordion
+
+.section_accordion {
+	width: 100%;
 	height: 100vh;
-	background-color: #171718;
+	display: grid;
+	place-content: center;
+	position: relative;
+}
+
+.accordion-bcg {
+	background: url('./images/oferta.png');
+	background-size: cover;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0.2;
+}
+
+.accordion {
+	max-width: 150rem;
+	height: 65rem;
 	display: flex;
-	align-items: center;
-	padding: 0 10rem;
 
-	&__contact-wrapper {
-		width: 80%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+	.contentBox {
+		position: relative;
+		margin: 1rem 2rem;
 
-		h1 {
-			// font-family: 'Oswald', sans-serif;
-			font-size: 4rem;
-			color: $color-text;
-			text-transform: uppercase;
-			margin-bottom: 3rem;
-		}
-	}
-
-	&__contact-form {
-		width: 70rem;
-		display: flex;
-		flex-direction: column;
-
-		input,
-		textarea {
-			padding: 1.5rem;
-			background-color: #444;
-			color: $color-text;
-			border: none;
-			margin-bottom: 2rem;
-			font-family: 'Oswald', sans-serif;
-			font-size: 1.8rem;
-			font-weight: 300;
-			letter-spacing: 0.1rem;
-		}
-
-		textarea {
-			max-width: 100%;
-			max-height: 15rem;
-			min-height: 5.5rem;
-		}
-
-		input[type='submit'] {
-			background-color: #7a1010;
-			text-transform: uppercase;
+		.label {
+			height: 25rem;
+			position: relative;
 			cursor: pointer;
-			transition: background-color 0.3s;
+			h3 {
+				text-align: center;
+				font-size: 3.5em;
+				font-family: 'Oswald', sans-serif;
+				color: #fff;
+			}
 
-			&:hover {
-				background-color: #5f0303;
+			&::before {
+				content: '+';
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				right: 2rem;
+				font-size: 3.5em;
 			}
 		}
+
+		.content {
+			position: relative;
+			background: #fff;
+			height: 0;
+			padding: 0 1rem;
+			overflow: hidden;
+			transition: height 1s, padding 0.5s;
+			overflow-y: none;
+			font-size: 2em;
+			border-bottom-left-radius: 10%;
+			border-bottom-right-radius: 10%;
+		}
+
+		&.active .content {
+			height: 40rem;
+			padding: 1rem 1rem;
+		}
 	}
 
-	&__contact-details {
-		display: flex;
-		margin-bottom: 8rem;
+	.contentBox-1 {
+		.label {
+			background: url('./images/mechanika.jpg') no-repeat;
+			background-size: cover;
 
-		div {
-			width: 25rem;
-			text-align: center;
-			margin: 4rem;
+			h3 {
+				background-image: linear-gradient(to right, #087285, rgb(13, 165, 211));
+			}
+		}
+		.content {
+			background: rgba(13, 165, 211, 0.9);
+		}
+	}
+
+	.contentBox-2 {
+		.label {
+			background: url('./images/motor.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #946809, rgb(189, 186, 14));
+			}
 		}
 
-		i {
-			font-size: 5rem;
-			color: #7a1010;
+		.content {
+			background: rgba(189, 186, 14, 0.9);
+		}
+	}
+
+	.contentBox-3 {
+		.label {
+			background: url('./images/wulkanizacja.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #a10c14, rgb(226, 59, 59));
+			}
 		}
 
-		h3 {
-			font-family: 'Lato', sans-serif;
-			font-size: 2.5rem;
-			margin: 2rem 0;
-			color: $color-text;
+		.content {
+			background: rgba(226, 59, 59, 0.9);
+		}
+	}
+
+	.contentBox-4 {
+		.label {
+			background: url('./images/road-mountain.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #0b7e48, rgb(59, 226, 134));
+			}
 		}
 
-		p {
-			font-size: 1.6rem;
-			color: $color-text;
+		.content {
+			background: rgba(59, 226, 134, 0.9);
 		}
 	}
 }
+// End of accordion
 
-// End of section 4
+// ContactUs
 
 .contactUs {
-	background-image: linear-gradient(90deg, #0e3959 0%, #0e3959 30%, #03a9f5 30%, #03a9f5 100%);
+	background-image: linear-gradient(to right, rgba(235, 137, 137, 0.3), rgba(245, 245, 191, 0.3)),
+		url(./images/road-mountain.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 	position: relative;
 	width: 100%;
-	padding: 40px 100px;
+	height: 100vh;
+	padding: 30px 100px;
 }
 
 .contactUs__title {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 2em;
+	font-size: 4rem;
 }
 
 .contactUs__heading {
@@ -786,6 +783,8 @@ $color-heading: #ddd;
 
 .contactUs__info {
 	grid-area: info;
+	display: flex;
+	column-gap: 20rem;
 }
 
 .contactUs__map {
@@ -793,26 +792,33 @@ $color-heading: #ddd;
 }
 
 .contactUs__contact {
-	padding: 40px;
-	background: #fff;
-	box-shadow: 0 5px 35px rgba(0, 0, 0, 0.15);
+	padding: 3rem;
+	background: rgba(83, 81, 81, 0.4);
+	backdrop-filter: blur(5px);
+	box-shadow: 0.4rem 0.5rem 1.5rem rgba(0, 0, 0, 0.3);
+}
+
+.contactUs__infobox {
+	display: flex;
 }
 
 .contactUs__box {
 	position: relative;
 	display: grid;
-	grid-template-columns: 2fr 1fr;
+	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr 1fr;
 	grid-template-areas: 'form info' 'form map';
-	grid-gap: 20px;
-	margin-top: 20px;
+	grid-gap: 2rem;
+	margin-top: 2rem;
 }
 
 .contactUs__contact h3 {
-	color: #0e3959;
+	color: $color-text;
 	font-weight: 500;
-	font-size: 1.4em;
-	margin-bottom: 10px;
+	font-size: 3rem;
+	margin-bottom: 6px;
+	font-family: 'Oswald', sans-serif;
+	text-shadow: 0.5rem 0.5rem 0.3rem $color-shadow;
 }
 
 /* form */
@@ -823,13 +829,13 @@ $color-heading: #ddd;
 
 .contactUs__row50 {
 	display: flex;
-	gap: 10px;
+	gap: 1rem;
 }
 
 .contactUs__inputBox {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 10px;
+	margin-bottom: 1rem;
 	width: 50%;
 }
 
@@ -838,38 +844,46 @@ $color-heading: #ddd;
 }
 
 .contactUs__inputBox span {
-	color: #18b7ff;
-	margin-top: 10px;
-	margin-bottom: 5px;
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.8rem;
+	color: $color-text;
+	margin-top: 1rem;
+	margin-bottom: 0.5rem;
 	font-weight: 500;
 }
 
 .contactUs__inputBox input {
-	padding: 10px;
-	font-size: 1.1em;
+	padding: 1rem;
+	font-size: 1.5rem;
 	outline: none;
 	border: 1px solid #333;
 }
 
 .contactUs__inputBox textarea {
-	padding: 10px;
-	font-size: 1.1em;
+	padding: 1rem;
+	font-size: 2rem;
 	outline: none;
 	border: 1px solid #333;
 	resize: none;
-	min-height: 220px;
-	margin-bottom: 10px;
+	min-height: 20rem;
+	margin-bottom: 1rem;
 }
 
 .contactUs__btnSubmit input[type='submit'] {
-	background: #ff578b;
+	font-family: 'Oswald', sans-serif;
+	background: $color-brand-1;
 	color: #fff;
 	border: none;
-	font-size: 1.1em;
-	max-width: 120px;
+	font-size: 2rem;
+	max-width: 12rem;
 	font-weight: 500;
 	cursor: pointer;
-	padding: 14px 15px;
+	padding: 1.4rem 1.5rem;
+	transition: background-color 0.3s;
+
+	&:hover {
+		background-color: #850404;
+	}
 }
 
 .contactUs__inputBox::placeholder {
@@ -878,60 +892,47 @@ $color-heading: #ddd;
 
 /* info */
 .contactUs__info {
-	background: #0e3959;
+	background: rgba(83, 81, 81, 0.4);
 }
 
 .contactUs__info h3 {
-	color: #fff;
+	color: $color-text;
 }
 
 .contactUs__info .contactUs__infoBox div {
 	display: flex;
 	align-items: center;
-	margin-bottom: 10px;
+	margin-bottom: 1rem;
 }
 
 .contactUs__info .contactUs__infoBox div span {
-	min-width: 40px;
-	height: 40px;
+	min-width: 4rem;
+	height: 4rem;
 	background: #18b7ff;
 	color: #fff;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 1.5em;
+	font-size: 2rem;
 	border-radius: 50%;
-	margin-right: 15px;
+	margin-right: 1.5rem;
 }
 
 .contactUs__info .contactUs__infoBox div p {
+	margin-top: 2rem;
 	color: #fff;
-	font-size: 1.1em;
+	font-size: 1.5rem;
+	line-height: 2rem;
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: 0.1rem;
 }
 
 .contactUs__info .contactUs__infoBox div a {
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: 0.1rem;
 	color: #fff;
 	text-decoration: none;
-	font-size: 1.1em;
-}
-
-.contactUs__sci {
-	margin-top: 40px;
-	display: flex;
-}
-
-.contactUs__sci li {
-	list-style: none;
-	margin-right: 15px;
-}
-
-.contactUs__sci li a {
-	font-size: 2em;
-	color: #ccc;
-}
-
-.contactUs__sci li a:hover {
-	color: #fff;
+	font-size: 1.5rem;
 }
 
 .contactUs__map {
@@ -941,6 +942,23 @@ $color-heading: #ddd;
 .contactUs__map iframe {
 	width: 100%;
 	height: 100%;
+}
+
+.contactUs__hoursBox h3 {
+	margin-bottom: 2.2rem;
+}
+
+.contactUs_hours-list  {
+	font-family: 'Oswald', sans-serif;
+	font-size: 1.8rem;
+	color: $color-text;
+	text-align: left;
+
+}
+
+.contactUs_hours-list span {
+	text-align: right;
+	color: $color-text;
 }
 
 /* Responsive  */
@@ -1075,10 +1093,10 @@ $color-heading: #ddd;
 
 @media (max-width: 1200px) {
 	.section-2,
-	.section-3,
-	.section-4 {
+	.section-3 {
 		flex-direction: column;
 	}
+
 	.heading {
 		margin-top: 5rem;
 	}
@@ -1115,15 +1133,6 @@ $color-heading: #ddd;
 
 		.mySwiper {
 			width: 100%;
-		}
-	}
-
-	.section-4 {
-		height: auto;
-		padding: 3rem 0;
-
-		.heading {
-			margin-bottom: 5rem;
 		}
 	}
 }
@@ -1194,10 +1203,6 @@ $color-heading: #ddd;
 		}
 	}
 
-	.section-4__contact-details div {
-		margin: 3rem, 2rem;
-	}
-
 	.footer {
 		flex-direction: column;
 		justify-content: center;
@@ -1232,21 +1237,10 @@ $color-heading: #ddd;
 		}
 	}
 
-	.section-4__contact {
-		&-details div {
-			width: 17rem;
-			margin: 3rem, 1rem;
-		}
-
-		&-form {
-			width: 60rem;
-		}
-
-		.section-1 {
-			&__banner-heading span {
-				font-size: 4.5rem;
-				letter-spacing: 1rem;
-			}
+	.section-1 {
+		&__banner-heading span {
+			font-size: 4.5rem;
+			letter-spacing: 1rem;
 		}
 	}
 }
