--- a/style.scss
+++ b/style.scss
@@ -36,11 +36,8 @@ $color-brand-1: #9e0e09;
 .navbar {
 	width: 100%;
 	height: 10rem;
-	background: url('./images/road.jpg') no-repeat;
-	// background-color: rgba(0, 0, 0, 0.75);
-	background-size: cover;
-	background-position: top;
-	// backdrop-filter: blur(7px);
+	background-color: rgba(0, 0, 0, 0.85);
+	backdrop-filter: blur(7px);
 	height: 10rem;
 	position: fixed;
 	top: -20rem;
@@ -182,6 +179,7 @@ $color-brand-1: #9e0e09;
 
 			&::first-letter {
 				color: $color-brand-1;
+				font-size: 5rem;
 			}
 
 			&:hover {
@@ -191,7 +189,7 @@ $color-brand-1: #9e0e09;
 
 			&:hover::first-letter {
 				color: $color-text;
-				text-shadow: 0rem 0rem 3rem $color-brand-1;
+				text-shadow: 0rem 0rem .3rem $color-brand-1;
 			}
 		}
 	}
@@ -423,7 +421,6 @@ $color-brand-1: #9e0e09;
 	padding: 0 10rem;
 	position: relative;
 
-	
 	&__paragraph {
 		width: 100rem;
 		position: absolute;
@@ -459,167 +456,84 @@ $color-brand-1: #9e0e09;
 
 // Section 3
 
-.section-3 {
+.opinion {
 	width: 100%;
 	height: 100vh;
-	background-color: #03070e;
-	display: flex;
-	align-items: center;
-	padding-left: 10rem;
+	background: radial-gradient(
+			circle,
+			rgba(116, 45, 163, 0.8) 0%,
+			rgba(231, 95, 95, 0.7) 50%,
+			rgba(235, 165, 68, 0.8) 100%
+		),
+		url('./images/car-mechanic-customer-shaking-hands_Image\ by\ aleksandarlittlewolf\ on\ Freepik.jpg');
+	background-position: center;
+	background-size: cover;
+	overflow: hidden;
 
-	.pricing-cards-wrapper {
+	&-cards-wrapper {
 		width: 100%;
-		display: flex;
-		justify-content: space-evenly;
-		padding: 5rem;
+		padding: 3rem 0;
 	}
 
-	.pricing-card {
-		width: 28rem;
-		height: 45rem;
-		background-color: #181b1d;
+	&-heading {
+		color: $color-text;
+	}
+
+	&-card {
+		background-image: url('./images/opinion.jpg');
+		background-position: center;
+		background-size: cover;
+		width: 45rem;
+		height: 65rem;
 		border-radius: 1rem;
-		box-shadow: 2rem 2rem 6rem rgba(0, 0, 0, 0.7);
+		box-shadow: 0 1.5rem 5rem rgba(0, 0, 0, 0.2);
+		filter: blur(0.5rem) brightness(0.8);
+		transition: all 0.3s;
 	}
 
-	.pricing-card-front {
+	&-box {
+		position: relative;
+		padding: 4rem 4rem 2rem 4rem;
 		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-items: center;
-	}
-
-	.pricing-card-heading {
 		font-size: 2rem;
-		font-weight: 300;
-		color: $color-text;
-		width: 100%;
-		height: 5rem;
-		display: flex;
-		align-items: center;
-		padding-left: 2rem;
-		border-radius: 1rem 1rem 0 0;
 	}
 
-	.heading-free {
-		background-image: linear-gradient(to right, #087285, #0da5d3);
-		border-radius: 1rem 1rem 0 0;
+	&-paragraph {
+		i {
+			font-size: 3rem;
+			display: block;
+			color: rgb(133, 210, 245);
+		}
+
+		.fa-quote-right {
+			text-align: right;
+		}
 	}
 
-	.heading-basic {
-		background-image: linear-gradient(to right, #946809, #bdba0e);
-		border-radius: 1rem 1rem 0 0;
-	}
-	.heading-standard {
-		background-image: linear-gradient(to right, #a10c14, #e23b3b);
-		border-radius: 1rem 1rem 0 0;
-	}
-	.heading-premium {
-		background-image: linear-gradient(to right, #0b7e48, #3be286);
-		border-radius: 1rem 1rem 0 0;
-	}
-
-	.pricing-card-price {
-		font-family: 'Lato', sans-serif;
-		font-size: 7rem;
-		font-weight: 600;
-		color: $color-text;
-	}
-
-	.pricing-card-list li {
-		margin-bottom: 0.5rem;
-	}
-
-	.pricing-card-list i {
-		font-size: 1.8rem;
-		width: 3rem;
-	}
-
-	.pricing-card-list span {
-		font-size: 1.8rem;
-		font-weight: 400;
-		letter-spacing: 0.1rem;
-	}
-
-	.list-free {
-		color: #0da5d3;
-	}
-
-	.list-basic {
-		color: #bdba0e;
-	}
-
-	.list-standard {
-		color: #e23d3b;
-	}
-
-	.list-premium {
-		color: #3be286;
-	}
-
-	.pricing-card-btn {
-		width: 18rem;
-		height: 5rem;
-		margin-bottom: 3rem;
-		border-radius: 3rem;
-		border: none;
-		font-size: 1.6rem;
-		text-transform: uppercase;
-		color: $color-text;
-		text-shadow: 0.3rem 0.3rem 0.6rem rgba(0, 0, 0, 0.5);
-	}
-
-	.btn-free {
-		background-color: #0da5d3;
-	}
-
-	.btn-basic {
-		background-color: #bdba0e;
-	}
-	.btn-standard {
-		background-color: #e23d3b;
-	}
-	.btn-premium {
-		background-color: #3be286;
-	}
-
-	.pricing-card-back {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: $color-text;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		transform: rotateY(180deg);
-		border-radius: 1rem;
-		backface-visibility: hidden;
-	}
-
-	.pricing-card-back a {
+	&-author {
 		font-size: 2.5rem;
-		color: $color-text;
+		text-align: right;
+		margin-top: 1rem;
+		color: rgba(24, 183, 255, 1);
 	}
 
-	.back-free {
-		background-image: linear-gradient(to right, #087285, #0da5d3);
+	&-link {
+		display: block;
+		margin-bottom: 2rem;
+		font-size: 1.5rem;
+		text-align: right;
 	}
 
-	.back-basic {
-		background-image: linear-gradient(to right, #946809, #bdba0e);
+	.swiper-slide-shadow-left,
+	.swiper-slide-shadow-right {
+		background-image: none;
 	}
-	.back-standard {
-		background-image: linear-gradient(to right, #a10c14, #e23b3b);
-	}
-	.back-premium {
-		background-image: linear-gradient(to right, #0b7e48, #3be286);
+	.swiper-slide-active {
+		filter: blur(0rem);
 	}
 }
-// End of section 3
+
+// End of Opinion
 
 // Accordion
 
@@ -948,12 +862,11 @@ $color-brand-1: #9e0e09;
 	margin-bottom: 2.2rem;
 }
 
-.contactUs_hours-list  {
+.contactUs_hours-list {
 	font-family: 'Oswald', sans-serif;
 	font-size: 1.8rem;
 	color: $color-text;
 	text-align: left;
-
 }
 
 .contactUs_hours-list span {
@@ -1005,24 +918,43 @@ $color-brand-1: #9e0e09;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	background-size: cover;
+	background-position: top;
+	background: radial-gradient(circle, rgba(139, 130, 130, 0.8) 40%, rgba(64, 63, 62, 0.9) 100%),
+		url('./images/road.jpg') no-repeat;
 	padding: 0 10rem;
 
 	&__nav a {
 		font-family: 'Lato', sans-serif;
 		text-transform: uppercase;
 		font-size: 2rem;
+		font-weight: 900;
 		color: $color-text;
-		margin-right: 3rem;
+		margin-right: 4.5rem;
 		letter-spacing: 0.1rem;
 		transition: color 0.4s;
+		display: inline-block;
+		transition: color 0.3s, scale 0.4s;
+
+		&::first-letter {
+			color: #862323;
+			font-size: 2.8rem;
+		}
 
 		&:hover {
 			color: #862323;
+			scale: 1.1;
+			text-shadow: 0rem 0rem 0.3rem $color-text;
+		}
+
+		&:hover::first-letter {
+			color: $color-text;
+			text-shadow: 0rem 0rem .3rem $color-brand-1;
 		}
 	}
 
 	&__copyright {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		color: #ddd;
 	}
 }
@@ -1042,10 +974,6 @@ $color-brand-1: #9e0e09;
 			width: 90rem;
 			right: 10rem;
 		}
-	}
-
-	.section-3 .heading-line {
-		margin-right: 3rem;
 	}
 }
 
@@ -1092,8 +1020,7 @@ $color-brand-1: #9e0e09;
 }
 
 @media (max-width: 1200px) {
-	.section-2,
-	.section-3 {
+	.section-2 {
 		flex-direction: column;
 	}
 
@@ -1114,25 +1041,6 @@ $color-brand-1: #9e0e09;
 			transform: translateX(-50%);
 			width: 80rem;
 			padding: 1rem 0 1rem 0;
-		}
-	}
-
-	.section-3 {
-		height: auto;
-		padding: 3rem 0 10rem 0;
-
-		.pricing-cards-wrapper {
-			width: 100%;
-			display: flex;
-			justify-content: space-evenly;
-		}
-
-		.heading {
-			margin-bottom: 5rem;
-		}
-
-		.mySwiper {
-			width: 100%;
 		}
 	}
 }
