--- a/style.scss
+++ b/style.scss
@@ -19,17 +19,22 @@ html {
 $color-shadow: rgba(0, 0, 0, 0.5);
 $color-text: #fff;
 $color-heading: #ddd;
-$color-brand-1: #9e0e09;
+$color-brand-1: red;
 
 .heading {
 	font-family: 'Audiowide', cursive;
 	font-size: 5rem;
 	font-weight: 400;
-	color: red;
+	color: $color-brand-1;
 	text-transform: uppercase;
 	text-align: center;
 	margin: 4rem 0;
 }
+
+.heading-white {
+	color: $color-text;
+}
+
 
 // Navbar
 
@@ -130,7 +135,7 @@ $color-brand-1: #9e0e09;
 
 	&__logo {
 		position: absolute;
-		top: 2.5rem;
+		top: 0.5rem;
 		left: 3rem;
 
 		p {
@@ -138,13 +143,14 @@ $color-brand-1: #9e0e09;
 			font-size: 3.5rem;
 			color: yellow;
 			font-weight: 900;
-			letter-spacing: 0.1rem;
+			letter-spacing: 0.3rem;
 			text-transform: uppercase;
+			text-align: center;
 		}
 
 		span {
-			display: inline-block;
 			font-family: 'Lato', sans-serif;
+			display: inline-block;
 			font-size: 3.5rem;
 			font-weight: 900;
 			color: $color-brand-1;
@@ -189,7 +195,7 @@ $color-brand-1: #9e0e09;
 
 			&:hover::first-letter {
 				color: $color-text;
-				text-shadow: 0rem 0rem .3rem $color-brand-1;
+				text-shadow: 0rem 0rem 0.3rem $color-brand-1;
 			}
 		}
 	}
@@ -410,51 +416,312 @@ $color-brand-1: #9e0e09;
 
 // End of section 1
 
-// Section 2
-.section-2 {
+// AboutUs
+
+.aboutUs {
 	width: 100%;
 	height: 100vh;
 	background-color: #222020;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	padding: 0 10rem;
 	position: relative;
 
+	&__box {
+		width: 100%;
+		padding: 0 10rem;
+		display: flex;
+		align-items: center;
+		column-gap: 10rem;
+	}
+
 	&__paragraph {
-		width: 100rem;
-		position: absolute;
-		bottom: 5rem;
-		right: 15rem;
+		width: 60rem;
 		font-size: 2rem;
 		color: $color-text;
-		border-top: 0.3rem double $color-heading;
-		border-bottom: 0.3rem double $color-heading;
 		padding: 2rem 0 2rem 0;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		text-align: justify;
-		text-shadow: 1rem 1rem 2rem $color-shadow;
 
-		.fa-quote-left {
-			align-self: flex-start;
-			font-size: 3rem;
-			margin-bottom: 1rem;
+		.icon-star {
+			text-align: center;
+			.fa-star {
+				padding: 2rem 1rem;
+			}
 		}
 
-		.fa-quote-right {
-			margin-top: 1rem;
-			align-self: flex-end;
-			font-size: 3rem;
+		p {
+			text-indent: 3rem;
+			word-spacing: 0.3rem;
+		}
+
+		.red {
+			color: red;
+		}
+
+		.yellow {
+			color: yellow;
+		}
+
+		b {
+			color: #18b7ff;
+		}
+
+		.center {
+			display: block;
+			font-size: 2.5rem;
+			text-align: center;
+		}
+	}
+
+	&__wrapper {
+		width: 115rem;
+		height: 68vh;
+		overflow: hidden;
+		position: relative;
+	}
+
+	&__slide {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		transition: opacity 1.5s;
+	}
+
+	&__slide img {
+		width: 100%;
+		background-position: center;
+		object-fit: cover;
+		box-shadow: 0.2rem 0.2rem 2rem $color-shadow;
+	}
+}
+
+// End of AboutUs
+
+// Accordion
+
+.section_accordion {
+	width: 100%;
+	height: 100vh;
+	display: grid;
+	place-content: center;
+	position: relative;
+}
+
+.accordion-bcg {
+	background: url('./images/oferta.png');
+	background-size: cover;
+	background-position: bottom;
+	background-repeat: no-repeat;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	opacity: 0.2;
+}
+
+.accordion {
+	max-width: 170rem;
+	height: 65rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+	.contentBox {
+		position: relative;
+		width: 38rem;
+		margin: 1rem 2rem;
+
+		.label {
+			height: 25rem;
+			position: relative;
+			cursor: pointer;
+			filter: brightness(85%);
+			transition: filter 0.3s;
+
+			&:hover {
+				filter: brightness(100%);
+			}
+
+			h3 {
+				text-align: center;
+				font-size: 3.5em;
+				font-family: 'Oswald', sans-serif;
+				color: #fff;
+			}
+		}
+
+		.content {
+			position: relative;
+			background: #fff;
+			height: 0;
+			padding: 0 1rem;
+			overflow: hidden;
+			transition: height 1s, padding 0.5s;
+			overflow-y: auto;
+			font-size: 2em;
+			border-bottom-left-radius: 10%;
+			border-bottom-right-radius: 10%;
+		}
+
+		&.active .content {
+			height: 40rem;
+			padding: 1rem 1rem;
+		}
+	}
+
+	.contentBox-1 {
+		.label {
+			background: url('./images/mechanika.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #087285, rgb(13, 165, 211));
+			}
+		}
+		.content {
+			background: rgb(112, 209, 238);
+		}
+	}
+
+	.contentBox-2 {
+		.label {
+			background: url('./images/motor.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #946809, rgb(189, 186, 14));
+			}
+		}
+
+		.content {
+			background: rgba(230, 228, 112, 0.9);
+		}
+	}
+
+	.contentBox-3 {
+		.label {
+			background: url('./images/wulkanizacja.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #a10c14, rgb(226, 59, 59));
+			}
+		}
+
+		.content {
+			background: rgba(226, 142, 142, 0.9);
+		}
+	}
+
+	.contentBox-4 {
+		.label {
+			background: url('./images/road-mountain.jpg') no-repeat;
+			background-size: cover;
+
+			h3 {
+				background-image: linear-gradient(to right, #0b7e48, rgb(59, 226, 134));
+			}
+		}
+
+		.content {
+			background: rgba(133, 226, 175, 0.9);
+		}
+	}
+}
+// End of accordion
+
+// Shop
+
+.shop {
+	min-height: 100vh;
+	width: 100%;
+	background: rgb(177, 209, 228);
+	font-family: sans-serif;
+	display: flex;
+	justify-content: start;
+	flex-direction: column;
+	align-items: center;
+	background-color: #333;
+
+	.signBox {
+		width: 100%;
+		height: 100%;
+	}
+
+	.sign {
+		padding: 0 10rem;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-around;
+		column-gap: 3rem;
+		// background: linear-gradient(90deg, rgb(115, 248, 115) 0%, rgb(241, 101, 204) 100%);
+		background-color: white;
+
+		img {
+			width: 7rem;
+			height: 7rem;
+			// filter: grayscale(100%);
+			transition: all 0.3s;
+			&:hover {
+				// filter: grayscale(0%);
+				transform: scale(1.34);
+			}
+		}
+	}
+
+	.shopBox {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0 10vmin;
+		overflow: hidden;
+
+		.card {
+			flex: 1;
+			transition: all 1s ease-in-out;
+			height: 70vmin;
+			position: relative;
+
+			.card__head {
+				color: black;
+				padding: 0.5em;
+				transition: transform 0.5s linear;
+				min-width: 100%;
+				text-align: center;
+				position: absolute;
+				bottom: -6rem;
+				font-size: 2rem;
+				white-space: nowrap;
+			}
+
+			&:hover {
+				flex-grow: 5;
+				img {
+					filter: grayscale(0%);
+				}
+				.card__head {
+					text-align: center;
+					color: white;
+					background: rgba(0, 0, 0, 0.7);
+					font-size: 2rem;
+					transform: translateY(-6rem);
+				}
+			}
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				transition: all 1s ease-in-out;
+				filter: grayscale(100%);
+			}
+			&:not(:nth-child(5)) {
+				margin-right: 1rem;
+			}
 		}
 	}
 }
 
-// End of section 2
+// End of shop
 
-// Section 3
+// Opinion
 
 .opinion {
 	width: 100%;
@@ -473,10 +740,6 @@ $color-brand-1: #9e0e09;
 	&-cards-wrapper {
 		width: 100%;
 		padding: 3rem 0;
-	}
-
-	&-heading {
-		color: $color-text;
 	}
 
 	&-card {
@@ -535,148 +798,17 @@ $color-brand-1: #9e0e09;
 
 // End of Opinion
 
-// Accordion
-
-.section_accordion {
-	width: 100%;
-	height: 100vh;
-	display: grid;
-	place-content: center;
-	position: relative;
-}
-
-.accordion-bcg {
-	background: url('./images/oferta.png');
-	background-size: cover;
-	background-position: bottom;
-	background-repeat: no-repeat;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	opacity: 0.2;
-}
-
-.accordion {
-	max-width: 150rem;
-	height: 65rem;
-	display: flex;
-
-	.contentBox {
-		position: relative;
-		margin: 1rem 2rem;
-
-		.label {
-			height: 25rem;
-			position: relative;
-			cursor: pointer;
-			h3 {
-				text-align: center;
-				font-size: 3.5em;
-				font-family: 'Oswald', sans-serif;
-				color: #fff;
-			}
-
-			&::before {
-				content: '+';
-				position: absolute;
-				top: 50%;
-				transform: translateY(-50%);
-				right: 2rem;
-				font-size: 3.5em;
-			}
-		}
-
-		.content {
-			position: relative;
-			background: #fff;
-			height: 0;
-			padding: 0 1rem;
-			overflow: hidden;
-			transition: height 1s, padding 0.5s;
-			overflow-y: none;
-			font-size: 2em;
-			border-bottom-left-radius: 10%;
-			border-bottom-right-radius: 10%;
-		}
-
-		&.active .content {
-			height: 40rem;
-			padding: 1rem 1rem;
-		}
-	}
-
-	.contentBox-1 {
-		.label {
-			background: url('./images/mechanika.jpg') no-repeat;
-			background-size: cover;
-
-			h3 {
-				background-image: linear-gradient(to right, #087285, rgb(13, 165, 211));
-			}
-		}
-		.content {
-			background: rgba(13, 165, 211, 0.9);
-		}
-	}
-
-	.contentBox-2 {
-		.label {
-			background: url('./images/motor.jpg') no-repeat;
-			background-size: cover;
-
-			h3 {
-				background-image: linear-gradient(to right, #946809, rgb(189, 186, 14));
-			}
-		}
-
-		.content {
-			background: rgba(189, 186, 14, 0.9);
-		}
-	}
-
-	.contentBox-3 {
-		.label {
-			background: url('./images/wulkanizacja.jpg') no-repeat;
-			background-size: cover;
-
-			h3 {
-				background-image: linear-gradient(to right, #a10c14, rgb(226, 59, 59));
-			}
-		}
-
-		.content {
-			background: rgba(226, 59, 59, 0.9);
-		}
-	}
-
-	.contentBox-4 {
-		.label {
-			background: url('./images/road-mountain.jpg') no-repeat;
-			background-size: cover;
-
-			h3 {
-				background-image: linear-gradient(to right, #0b7e48, rgb(59, 226, 134));
-			}
-		}
-
-		.content {
-			background: rgba(59, 226, 134, 0.9);
-		}
-	}
-}
-// End of accordion
-
 // ContactUs
 
 .contactUs {
-	background-image: linear-gradient(to right, rgba(235, 137, 137, 0.3), rgba(245, 245, 191, 0.3)),
+	background-image: linear-gradient(to right, rgba(40, 96, 180, 0.3) 5%, rgba(255, 255, 255, 0.6)),
 		url(./images/road-mountain.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	padding: 30px 100px;
+	padding: 3rem 10rem;
 }
 
 .contactUs__title {
@@ -771,6 +903,10 @@ $color-brand-1: #9e0e09;
 	font-size: 1.5rem;
 	outline: none;
 	border: 1px solid #333;
+
+	&:focus {
+		border: 0.2rem solid $color-brand-1;
+	}
 }
 
 .contactUs__inputBox textarea {
@@ -937,19 +1073,19 @@ $color-brand-1: #9e0e09;
 		transition: color 0.3s, scale 0.4s;
 
 		&::first-letter {
-			color: #862323;
+			color: $color-brand-1;
 			font-size: 2.8rem;
 		}
 
 		&:hover {
-			color: #862323;
+			color: $color-brand-1;
 			scale: 1.1;
 			text-shadow: 0rem 0rem 0.3rem $color-text;
 		}
 
 		&:hover::first-letter {
 			color: $color-text;
-			text-shadow: 0rem 0rem .3rem $color-brand-1;
+			text-shadow: 0rem 0rem 0.3rem $color-brand-1;
 		}
 	}
 
@@ -963,36 +1099,11 @@ $color-brand-1: #9e0e09;
 
 // Responsive
 @media (max-width: 1800px) {
-	.section-2 {
-		&__video-wrapper {
-			width: 90rem;
-			height: 45rem;
-			right: 10rem;
-		}
-
-		&__paragraph {
-			width: 90rem;
-			right: 10rem;
-		}
-	}
 }
 
 @media (max-width: 1650px) {
 	html {
 		font-size: 57%;
-	}
-	.section-2 {
-		&__video-wrapper {
-			width: 85rem;
-			height: 40rem;
-			right: 5rem;
-		}
-
-		&__paragraph {
-			width: 85rem;
-			right: 5rem;
-			bottom: 10rem;
-		}
 	}
 }
 
@@ -1020,28 +1131,8 @@ $color-brand-1: #9e0e09;
 }
 
 @media (max-width: 1200px) {
-	.section-2 {
-		flex-direction: column;
-	}
-
 	.heading {
 		margin-top: 5rem;
-	}
-
-	.section-2 {
-		&__video-wrapper {
-			top: 25%;
-			left: 50%;
-			transform: translateX(-50%);
-			width: 80rem;
-		}
-
-		&__paragraph {
-			left: 50%;
-			transform: translateX(-50%);
-			width: 80rem;
-			padding: 1rem 0 1rem 0;
-		}
 	}
 }
 
@@ -1128,21 +1219,6 @@ $color-brand-1: #9e0e09;
 @media (max-width: 550px) {
 	html {
 		font-size: 32%;
-	}
-
-	.section-2 {
-		height: 75vh;
-
-		&__video-wrapper {
-			top: 25%;
-			left: 50%;
-			transform: translateX(-50%);
-			width: 65rem;
-		}
-
-		&__paragraph {
-			width: 65rem;
-		}
 	}
 
 	.section-1 {
